--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <h2>Computador</h2>
                 <p>0</p>
             </div>
-        </div>    
-        
 
+        </div>    
+        <img class="imagen" src="pikachu-2c7i301s15ihjg55.jpg" alt="">
     </section>
 
     
