--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
                 <p>0</p>
             </div>
 
-        </div>    
-        <img class="imagen" src="pikachu-2c7i301s15ihjg55.jpg" alt="">
+            </div>
+        </div>
+        <div class="tablero">
+            <div class="manos">
+                <img class="mano" src="recursos/piedra_ada.png" alt="">
+                <img class="mano" src="recursos/piedra_computadora.png" alt="">
+
+            </div>    
     </section>
 
     
