Archivo java scrip agregando

--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
     <h1>Juego piedra, Papel y Tijera</h1>
     <section class="principal">
         <div class="puntajes">
+
             <div class="puntaje-usuario">
                 <h2>Usuario</h2>
-                <p>0</p>
+                <p id="puntaje-usuario-computador">0</p>
             </div>
             <div class="puntaje-computador">
                 <h2>Computador</h2>
                 <p>0</p>
-            </div>
-
             </div>
         </div>
         <div class="tablero">
@@ -27,9 +26,10 @@
                 <img class="mano" src="recursos/piedra_ada.png" alt="">
                 <img class="mano" src="recursos/piedra_computadora.png" alt="">
 
-            </div>    
+            </div>  
+        </div>       
     </section>
-
+ <script src="apps.js"></script>
     
 </body>
 </html>
